--- a/INSTALL
+++ b/INSTALL
@@ -9,7 +9,7 @@ use the GNU tool set.
 Compiling
 ---------
 
-The perfered method for compiling sox is to use the "configure" scripts
+The prefered method for compiling sox is to use the "configure" scripts
 compatible with most unix systems that contain "/bin/sh" or equivalent
 (even the Win95/NT Cygwin setup will work with this).
 
@@ -37,7 +37,6 @@ have a canned Makefile:
     OS/2       Makefile.unx (using EMX GCC compiler)
     OS9        Makefile.os9
     UNIX       Makefile.unx (or most platforms using GCC compatible compiler)
-    VMS        descrip.mms & sox.opt (Support is outdated.  Read vms.lis)
     WIN95/NT   Makefile.unx (using Cynus GCC for Win32)
             or Makefile.dos (with a little modifying for Visual C++)
 
