--- a/INSTALL
+++ b/INSTALL
@@ -49,17 +49,25 @@ There are a few additional defines available for your operating
 system to add things such as sound playing support.  This is 
 generally documented in the Makefiles
 
+Optional Libraries
+------------------
+
 There is optional GSM support as a data type but you must first
 install the GSM library on your system.  More information on it
 can be obtained from http://www.cs.tu-berlin.de/~jutta/toast.html
 After installing the GSM library you must point to this file by
 commenting and modifying the appropriate section of the Makefile.
 
+Optional Compile Options
+------------------------
+
 If you're processing lots of u-law or a-law files, you should
 define FAST_ULAW_COMPRESSION and/or FAST_ALAW_COMPRESSION in your 
 Makefile.  These substitute a table-based method for the standard method.
 The tables are 32K, so if you don't want them, you don't have to
-use them.
+use them.  It is automatically added to your Makefile if you run
+the configure script with the --enable-fast-ulaw or --enable-fast-alaw
+options.
 
 Testing
 -------
