IMA ADPCM write support in wav files, speed up of adpcm codecs, and speed improvements to raw.

--- a/Changelog
+++ b/Changelog
@@ -6,6 +6,12 @@ sox-11gamma.
 
 sox-12.17
 ---------
+  o Sox can now write IMA_ADPCM compressed .wav,
+	  MSADPCM writing should be available soon.
+  o General changes to wav.c for writing additional wav formats.
+  o Speedups to adpcm read routines, new codex versions are
+	  now in ima_rw.c and adpcm.c.
+  o Speedups for raw.c, especially for gcc with glibc.
   o Fixed a segfault problem with ulaw/alaw conversion, where
     an out-of-range index into the tables could occur.
   o More detailed output from the stat effect.
