--- a/sox.1
+++ b/sox.1
@@ -9,7 +9,7 @@
 .if t .sp .5v
 .if n .sp
 ..
-.TH SoX 1 "November 8, 1999"
+.TH SoX 1 "November 22, 1999"
 .SH NAME
 sox \- Sound eXchange : universal sound sample translator
 .SH SYNOPSIS
@@ -39,7 +39,7 @@ sox \- Sound eXchange : universal sound sample translator
 \fIFormat options:\fB
 [ \fB-t \fIfiletype\fB ]
 [ -r \fIrate\fB ]
-[ -s/-u/-U/-A/-a/-g ]
+[ -s/-u/-U/-A/-a/-i/-g ]
 [ -b/-w/-l/-f/-d/-D ]
 [ -c \fIchannels\fB ]
 [ -x ]
@@ -146,15 +146,18 @@ different rates then a sample rate change effect must be ran.  If a
 sample rate changing effect is not specified then a default one will be
 used with its default parameters.
 .TP 10
-\fB-s/-u/-U/-A/-a/-g\fR
+\fB-s/-u/-U/-A/-a/-i/-g\fR
 The sample data is signed linear (2's complement),
 unsigned linear, U-law (logarithmic), A-law (logarithmic),
-ADPCM, or GSM.
+ADPCM, IMA_ADPCM, or GSM.
 U-law and A-law are the U.S. and international
 standards for logarithmic telephone sound compression.
 ADPCM is form of sound compression that has a good
 compromise between good sound quality and fast encoding/decoding
 time.
+IMA_ADPCM is also a form of adpcm compression, slightly simpler
+and slightly lower fidelity than Microsoft's flavor of ADPCM.
+IMA_ADPCM is also called DVI_ADPCM.
 GSM is a standard used for telephone sound compression in
 European countries and its gaining popularity because of its
 quality.
@@ -440,9 +443,11 @@ options will cause a format conversion, and the \fB.wav\fR
 will written appropriately.  Note that it is possible to
 write data of a type that cannot be specified by
 the \fB.wav\fR header, and you will be warned that
-you a writing a bad file !
+you are writing a bad file !
 Sox currently can read PCM, ULAW, ALAW, MS ADPCM, and IMA (or DVI) ADPCM.
-It can output all of these formats except the ADPCM styles.
+It can write all of these formats including
+.B (NEW!)
+the ADPCM styles.
 .TP 10
 .B .wve
 Psion 8-bit alaw
