--- a/TODO
+++ b/TODO
@@ -6,17 +6,17 @@ all patches to cbagwell@sprynet.com.
     you can grab the source code from the .au handler and software
     is avaliable from public sources for the rest.
 
-  o Add GSM support to WAV format.  Goes with the above but used
-    most often.
-
   o highpass and lowpass filters don't let you specify the cut
     of freq.  Need some improvements to these filters.
+    SJB: The old highp.c filter is IMHO broken, need to review that code.
 
   o Create a version of OSS and Sun driver that can play and record from the
     same device in duplex.
 
   o Internally sox can handle multiple effects on a given sound file.
     Add support for this from the command line.
+
+  o Add support for mixing multiple inputs from command line.
 
   o Endian checks are probably invalid on 64-bit machines.  Need to use
     something a more constant size the "int".  Probably should make it
@@ -30,7 +30,7 @@ all patches to cbagwell@sprynet.com.
     the urge to come up with their own file format.
 
   o More effects!  I don't know DSP at all.  A Pitch Shifter is high
-    on the list.
+    on the list.  Spectrum analyser, etc, using FFTW lib.
 
   o Loop support for all formats that know about it.  WAV has
     some support for loops ("cue-points") but no support for
